<?xml version="1.0" encoding="utf-8"?>

<!-- Create by Daniel -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/myprofil"
        android:textSize="40dp"
        android:textColor="@color/black"

        />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"

        android:background="@drawable/border_background_white"
        >
        <!-- Zeile 1  -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            >

            <TextView
                android:width="150dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/name"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <EditText
                android:width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/name"
                android:textSize="18dp"
                android:inputType="text"
                android:background="@drawable/border" />
        </TableRow>
        <!-- Zeile 2  -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/age"
                android:textSize="20dp"
                android:textColor="@color/black"
                />



        </TableRow>
        <!-- Zeile 3  -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/gender"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                />

        </TableRow>
        <!-- Zeile 4  -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/studie"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <EditText
                android:width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/studie"
                android:textSize="18dp"
                android:inputType="text"
                android:background="@drawable/border" />
        </TableRow>
        <!-- Zeile 5  -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/university"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/university"
                />

        </TableRow>
        <!-- Zeile 6  -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/interests"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <EditText
                android:width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/interests"
                android:textSize="18dp"
                android:inputType="text"
                android:background="@drawable/border" />
        </TableRow>
        <!-- Zeile 7  -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/hometown"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <EditText
                android:width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/hometown"
                android:textSize="18dp"
                android:inputType="text"
                android:background="@drawable/border" />
        </TableRow>
        <!-- Zeile 8  -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/postal_code"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <!-- Maximal 5 integer INPUT -->
            <EditText
                android:width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/postal_code"
                android:textSize="18dp"
                android:inputType="numberSigned"
                android:background="@drawable/border" />

        </TableRow>
        <!-- Zeile 9  -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/sexual_preference"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sexual_preference"
                />


        </TableRow>
        <!-- Zeile 10  -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/profil_photo"
                android:textSize="20dp"
                android:textColor="@color/black"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>